[package]
name = "rust-m3u8"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13.2"
bytes = "1.10.1"
chrono = "0.4.42"
clap = { version = "4.5", features = ["derive", "color", "unicode"] }
futures = "0.3.31"
indicatif = "0.18.0"
lazy_static = "1.5.0"
md-5 = "0.10.6"
once_cell = "1.21.3"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.11.3"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = "1.0.228"
signal-hook = "0.3.18"
thiserror = "2.0.17"
tokio = "1.47.1"
toml = "0.9.7"
url = "2.5.7"
