[package]
name = "rust-m3u8"
version = "1.0.1"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive", "color", "unicode"] }
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
indicatif = "0.18.0"
md-5 = "0.10.6"
regex = "1.11.3"
serde = "1.0.228"
thiserror = "2.0.17"
toml = "0.9.7"
lazy_static = "1.5.0"
rand = "0.9.2"
bytes = "1.10.1"
rayon = "1.11.0"
url = "2.5.7"

