[package]
name = "rust-m3u8"
version = "1.2.2"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
md-5 = "0.10"